# alpha

./: .clang-format  .clang-tidy  .devcontainer.json  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  README.rst  alpha.repos  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/nouveau/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.docker/: Dockerfile
.docker/entrypoints/: dev.sh  sim.sh
.github/: mergify.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  config.yml  documentation.yaml  feature-request.yaml
.github/workflows/: ci.yaml  docker.yaml  format.yaml
alpha_bringup/: CMakeLists.txt  package.xml
alpha_bringup/config/: alpha_controllers.yaml
alpha_bringup/launch/: alpha.launch.py  planning.launch.py
alpha_description/: .setup_assistant  CMakeLists.txt  package.xml
alpha_description/config/: alpha.config.srdf.xacro  alpha.config.xacro  alpha_controllers.yaml  initial_positions.yaml  initial_velocities.yaml
alpha_description/gazebo/: alpha.gazebo.xacro
alpha_description/gazebo/worlds/: empty.world
alpha_description/launch/: view_alpha.launch.py
alpha_description/meshes/: LICENSE
alpha_description/moveit2/: alpha.config.srdf.xacro  alpha.srdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  planning_pipelines.yaml  ros2_controllers.yaml
alpha_description/ros2_control/: alpha.ros2_control.xacro
alpha_description/rviz/: moveit.rviz  rviz.rviz  view_alpha.rviz
alpha_description/srdf/: alpha.srdf  alpha.srdf.xacro
alpha_description/urdf/: alpha.ros2_control.xacro  alpha.urdf.xacro  alpha_5.urdf.xacro  alpha_5_description.urdf.xacro  alpha_description.urdf.xacro
alpha_description/urdf/end_effectors/: standard_jaws.urdf.xacro
alpha_description/xacro/: alpha.config.xacro  alpha.gazebo.xacro  alpha.ros2_control.xacro  alpha.urdf.xacro  alpha_platform.config.xacro  alpha_platform.urdf.xacro
alpha_description/xacro/end_effectors/: standard_jaws.urdf.xacro
alpha_driver/: CMakeLists.txt  package.xml
alpha_driver/include/alpha_driver/: cobs.hpp  crc.hpp  device_id.hpp  driver.hpp  mode.hpp  packet.hpp  packet_id.hpp  serial_client.hpp
alpha_driver/src/: cobs.cpp  crc.cpp  driver.cpp  packet.cpp  serial_client.cpp
alpha_driver/test/: test_cobs.cpp  test_crc.cpp  test_packet.cpp
alpha_hardware/: CMakeLists.txt  alpha_hardware.xml  package.xml
alpha_hardware/include/alpha_hardware/: hardware.hpp
alpha_hardware/src/: hardware.cpp
alpha_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
alpha_moveit2_config/config/: alpha.ros2_control.xacro  alpha.srdf  alpha.urdf.xacro  initial_positions.yaml  ros2_controllers.yaml
alpha_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
alpha_msgs/: CMakeLists.txt
alpha_msgs/msg/: Packet.msg
src/alpha/: CMakeLists.txt  package.xml
src/alpha_control/: CMakeLists.txt  package.xml
src/alpha_driver/: CMakeLists.txt  alpha_hardware.xml  package.xml
src/alpha_driver/include/alpha_driver/: cobs.hpp  crc.hpp  device_id.hpp  driver.hpp  hardware.hpp  hardware_flags.cpp  hardware_flags.hpp  mode.hpp  packet.hpp  packet_id.hpp  serial_client.hpp
src/alpha_driver/src/: cobs.cpp  crc.cpp  driver.cpp  packet.cpp  serial_client.cpp
src/alpha_driver/test/: test_cobs.cpp  test_crc.cpp  test_packet.cpp
src/alpha_driver/tests/: test_crc.cpp
src/alpha_hardware/: CMakeLists.txt  alpha_hardware.xml  package.xml
src/alpha_msgs/: CMakeLists.txt  package.xml
src/driver/: CMakeLists.txt  package.xml
